# tecs

./: .gitignore  Cargo.toml  README.md
src/: core.rs  lib.rs  query.rs  system.rs
