[package]
name = "tecs"
description = "TeaECS, a simple ECS"
version = "1.1.0"
repository = "https://github.com/Lisible/tecs/"
license = "MIT"
authors = ["Clément Sibille <clement.sibille@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"